--- a/DailyReview/DailyReview-Info.plist
+++ b/DailyReview/DailyReview-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>brainPurple</string>
 	<key>CFBundleIdentifier</key>
 	<string>edu.mit.dblalock.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
